syntax = "proto3";

package creditos;

import "google/protobuf/any.proto";

option csharp_namespace = "EntryPoints.GRPc.Protos";

// Requests
message CrearUsuarioRequest {
  string nombre = 1;
  string apellido = 2;
  string cedula = 3;
  string correo = 4;
  int32 edad = 5;
  string profesion = 6;
}

message CrearCreditoRequest {
  string usuarioId = 2;
  string cuentaId = 3;
  int32 totalPrestamo = 4;
  int32 deudaTotal = 5;
}

// Responses
message StandardResponse {
  google.protobuf.Any data = 1;
  bool error = 2;
  string message = 3;
}

message Usuario {
  string id = 1;
  string nombre = 2;
  string apellido = 3;
  string cedula = 4;
  string correo = 5;
  int32 edad = 6;
  string profesion = 7;
}

message Credito {
  string id = 1;
  string usuarioId = 2;
  string cuentaId = 3;
  int32 totalPrestamo = 4;
  int32 deudaTotal = 5;
}

// Services
service UsuariosServices {
  rpc CrearUsuario(CrearUsuarioRequest) returns (StandardResponse);
  rpc CrearCredito(CrearCreditoRequest) returns (StandardResponse);
}